# officeboxpy

./: LICENSE  README.md  main.py  pyproject.toml
.config/: i18n_config.json  translations.json  ui_config.json
pages/: about.py  settings.py  start.py  theme_settings.py
tools/filetransfer/: _init_.py
