[project]
name = "officeboxpy"
version = "0.1.0"
license = { text = "MIT License" }
description = "Add your description here"
authors = [
    { name = "Cherry Fu", email = "me@dgct.cc" }
]
readme = "README.md"
dependencies = [
    "flet-pages>=0.0.2",
    "flet[all]==0.27.1",
    "pyinstaller>=6.16.0",
]
